# HNTAS/HNTAS.Api.Client/api/openapi.yaml
@@ -3841,7 +3841,11 @@ components:
             assessment: assessment
             email: email
             status: Active
-          soaStatus: soaStatus
+          soaStatus:
+          - soaStatusType: null
+            count: 3
+          - soaStatusType: null
+            count: 3
           soaStatusUpdatedBy: soaStatusUpdatedBy
           assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
           stageId: Stage1
@@ -3853,7 +3857,11 @@ components:
             assessment: assessment
             email: email
             status: Active
-          soaStatus: soaStatus
+          soaStatus:
+          - soaStatusType: null
+            count: 3
+          - soaStatusType: null
+            count: 3
           soaStatusUpdatedBy: soaStatusUpdatedBy
           assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
           stageId: Stage1
@@ -4309,7 +4317,7 @@ components:
             connectionTypes:
             - ChildConnections
             - ChildConnections
-          status: InProgress
+          status: NotStarted
           updatedAt: 2000-01-23T04:56:07.000+00:00
         uHnId: uHnId
         networkElements:
@@ -4329,7 +4337,11 @@ components:
                 assessment: assessment
                 email: email
                 status: Active
-              soaStatus: soaStatus
+              soaStatus:
+              - soaStatusType: null
+                count: 3
+              - soaStatusType: null
+                count: 3
               soaStatusUpdatedBy: soaStatusUpdatedBy
               assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
               stageId: Stage1
@@ -4341,7 +4353,11 @@ components:
                 assessment: assessment
                 email: email
                 status: Active
-              soaStatus: soaStatus
+              soaStatus:
+              - soaStatusType: null
+                count: 3
+              - soaStatusType: null
+                count: 3
               soaStatusUpdatedBy: soaStatusUpdatedBy
               assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
               stageId: Stage1
@@ -4359,7 +4375,11 @@ components:
                 assessment: assessment
                 email: email
                 status: Active
-              soaStatus: soaStatus
+              soaStatus:
+              - soaStatusType: null
+                count: 3
+              - soaStatusType: null
+                count: 3
               soaStatusUpdatedBy: soaStatusUpdatedBy
               assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
               stageId: Stage1
@@ -4371,7 +4391,11 @@ components:
                 assessment: assessment
                 email: email
                 status: Active
-              soaStatus: soaStatus
+              soaStatus:
+              - soaStatusType: null
+                count: 3
+              - soaStatusType: null
+                count: 3
               soaStatusUpdatedBy: soaStatusUpdatedBy
               assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
               stageId: Stage1
@@ -4876,7 +4900,7 @@ components:
             connectionTypes:
             - connectionTypes
             - connectionTypes
-          status: InProgress
+          status: NotStarted
           updatedAt: 2000-01-23T04:56:07.000+00:00
         uHnId: uHnId
         networkElements:
@@ -4896,7 +4920,11 @@ components:
                 assessment: assessment
                 email: email
                 status: Active
-              soaStatus: soaStatus
+              soaStatus:
+              - soaStatusType: null
+                count: 3
+              - soaStatusType: null
+                count: 3
               soaStatusUpdatedBy: soaStatusUpdatedBy
               assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
               stageId: Stage1
@@ -4908,7 +4936,11 @@ components:
                 assessment: assessment
                 email: email
                 status: Active
-              soaStatus: soaStatus
+              soaStatus:
+              - soaStatusType: null
+                count: 3
+              - soaStatusType: null
+                count: 3
               soaStatusUpdatedBy: soaStatusUpdatedBy
               assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
               stageId: Stage1
@@ -4926,7 +4958,11 @@ components:
                 assessment: assessment
                 email: email
                 status: Active
-              soaStatus: soaStatus
+              soaStatus:
+              - soaStatusType: null
+                count: 3
+              - soaStatusType: null
+                count: 3
               soaStatusUpdatedBy: soaStatusUpdatedBy
               assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
               stageId: Stage1
@@ -4938,7 +4974,11 @@ components:
                 assessment: assessment
                 email: email
                 status: Active
-              soaStatus: soaStatus
+              soaStatus:
+              - soaStatusType: null
+                count: 3
+              - soaStatusType: null
+                count: 3
               soaStatusUpdatedBy: soaStatusUpdatedBy
               assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
               stageId: Stage1
@@ -5802,7 +5842,11 @@ components:
               assessment: assessment
               email: email
               status: Active
-            soaStatus: soaStatus
+            soaStatus:
+            - soaStatusType: null
+              count: 3
+            - soaStatusType: null
+              count: 3
             soaStatusUpdatedBy: soaStatusUpdatedBy
             assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
             stageId: Stage1
@@ -5814,7 +5858,11 @@ components:
               assessment: assessment
               email: email
               status: Active
-            soaStatus: soaStatus
+            soaStatus:
+            - soaStatusType: null
+              count: 3
+            - soaStatusType: null
+              count: 3
             soaStatusUpdatedBy: soaStatusUpdatedBy
             assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
             stageId: Stage1
@@ -5832,7 +5880,11 @@ components:
               assessment: assessment
               email: email
               status: Active
-            soaStatus: soaStatus
+            soaStatus:
+            - soaStatusType: null
+              count: 3
+            - soaStatusType: null
+              count: 3
             soaStatusUpdatedBy: soaStatusUpdatedBy
             assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
             stageId: Stage1
@@ -5844,7 +5896,11 @@ components:
               assessment: assessment
               email: email
               status: Active
-            soaStatus: soaStatus
+            soaStatus:
+            - soaStatusType: null
+              count: 3
+            - soaStatusType: null
+              count: 3
             soaStatusUpdatedBy: soaStatusUpdatedBy
             assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
             stageId: Stage1
@@ -5894,7 +5950,11 @@ components:
               assessment: assessment
               email: email
               status: Active
-            soaStatus: soaStatus
+            soaStatus:
+            - soaStatusType: null
+              count: 3
+            - soaStatusType: null
+              count: 3
             soaStatusUpdatedBy: soaStatusUpdatedBy
             assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
             stageId: Stage1
@@ -5906,7 +5966,11 @@ components:
               assessment: assessment
               email: email
               status: Active
-            soaStatus: soaStatus
+            soaStatus:
+            - soaStatusType: null
+              count: 3
+            - soaStatusType: null
+              count: 3
             soaStatusUpdatedBy: soaStatusUpdatedBy
             assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
             stageId: Stage1
@@ -5924,7 +5988,11 @@ components:
               assessment: assessment
               email: email
               status: Active
-            soaStatus: soaStatus
+            soaStatus:
+            - soaStatusType: null
+              count: 3
+            - soaStatusType: null
+              count: 3
             soaStatusUpdatedBy: soaStatusUpdatedBy
             assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
             stageId: Stage1
@@ -5936,7 +6004,11 @@ components:
               assessment: assessment
               email: email
               status: Active
-            soaStatus: soaStatus
+            soaStatus:
+            - soaStatusType: null
+              count: 3
+            - soaStatusType: null
+              count: 3
             soaStatusUpdatedBy: soaStatusUpdatedBy
             assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
             stageId: Stage1
@@ -5985,7 +6057,11 @@ components:
               assessment: assessment
               email: email
               status: Active
-            soaStatus: soaStatus
+            soaStatus:
+            - soaStatusType: null
+              count: 3
+            - soaStatusType: null
+              count: 3
             soaStatusUpdatedBy: soaStatusUpdatedBy
             assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
             stageId: Stage1
@@ -5997,7 +6073,11 @@ components:
               assessment: assessment
               email: email
               status: Active
-            soaStatus: soaStatus
+            soaStatus:
+            - soaStatusType: null
+              count: 3
+            - soaStatusType: null
+              count: 3
             soaStatusUpdatedBy: soaStatusUpdatedBy
             assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
             stageId: Stage1
@@ -6015,7 +6095,11 @@ components:
               assessment: assessment
               email: email
               status: Active
-            soaStatus: soaStatus
+            soaStatus:
+            - soaStatusType: null
+              count: 3
+            - soaStatusType: null
+              count: 3
             soaStatusUpdatedBy: soaStatusUpdatedBy
             assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
             stageId: Stage1
@@ -6027,7 +6111,11 @@ components:
               assessment: assessment
               email: email
               status: Active
-            soaStatus: soaStatus
+            soaStatus:
+            - soaStatusType: null
+              count: 3
+            - soaStatusType: null
+              count: 3
             soaStatusUpdatedBy: soaStatusUpdatedBy
             assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
             stageId: Stage1
@@ -6622,7 +6710,7 @@ components:
           connectionTypes:
           - ChildConnections
           - ChildConnections
-        status: InProgress
+        status: NotStarted
         updatedAt: 2000-01-23T04:56:07.000+00:00
       nullable: true
       properties:
@@ -6701,7 +6789,7 @@ components:
           connectionTypes:
           - ChildConnections
           - ChildConnections
-        status: InProgress
+        status: NotStarted
         updatedAt: 2000-01-23T04:56:07.000+00:00
       properties:
         status:
@@ -6914,7 +7002,7 @@ components:
           connectionTypes:
           - connectionTypes
           - connectionTypes
-        status: InProgress
+        status: NotStarted
         updatedAt: 2000-01-23T04:56:07.000+00:00
       nullable: true
       properties:
@@ -6964,7 +7052,11 @@ components:
           assessment: assessment
           email: email
           status: Active
-        soaStatus: soaStatus
+        soaStatus:
+        - soaStatusType: null
+          count: 3
+        - soaStatusType: null
+          count: 3
         soaStatusUpdatedBy: soaStatusUpdatedBy
         assessorUpdatedAt: 2000-01-23T04:56:07.000+00:00
         stageId: Stage1
@@ -6972,8 +7064,10 @@ components:
         stageId:
           $ref: "#/components/schemas/NullableOfSoaStage"
         soaStatus:
+          items:
+            $ref: "#/components/schemas/SoaStatusWithCount"
           nullable: true
-          type: string
+          type: array
         soaStatusUpdatedAt:
           format: date-time
           nullable: true
@@ -6993,14 +7087,24 @@ components:
       type: object
     SoaStatus:
       enum:
+      - NotStarted
       - InProgress
-      - Submitted
-      - Complete
-      - Archived
-      - ReadyToStart
-      - CannotStartYet
-      - Incomplete
+      - SoACompleted
+      - SoAAgreed
+      - BeingAssessed
       type: string
+    SoaStatusWithCount:
+      example:
+        soaStatusType: null
+        count: 3
+      properties:
+        soaStatusType:
+          $ref: "#/components/schemas/SoaStatus"
+        count:
+          format: int32
+          nullable: true
+          type: integer
+      type: object
     UpdateConnectionsRequest:
       example:
         hnId: hnId
@@ -7116,7 +7220,7 @@ components:
         hnId: hnId
         updatedBy: updatedBy
         hnName: hnName
-        status: InProgress
+        status: NotStarted
       properties:
         hnId:
           type: string
